@@ -1,0 +1,6 @@
+{
+"name" : "Favourites Plugin",
+"version" : "0.1.0",
+"dependencies" : []
+}
+
